syntax = "proto3";
package agent_service;

import "handshake.proto";
import "config.proto";
import "metrics.proto";
import "docker.proto";
import "generic_metrics.proto";
import "command.proto";
import "pty.proto";
import "heartbeat.proto";
import "batch_command.proto"; // Added import

message MessageToServer {
  uint64 client_message_id = 1;
  int32 vps_db_id = 9; // The vps.id from the database
  string agent_secret = 10; // The secret for this specific agent/vps
  oneof payload {
    AgentHandshake agent_handshake = 2;
    PerformanceSnapshotBatch performance_batch = 3;
    DockerInfoBatch docker_batch = 4;
    GenericMetricsBatch generic_metrics_batch = 5;
    CommandResponse command_response = 6;
    PtyDataToServer pty_data_to_server = 7;
    Heartbeat heartbeat = 8;
    StaticSystemInfo static_system_info = 11; // New field for static info
    UpdateConfigResponse update_config_response = 12;
    BatchCommandOutputStream batch_command_output_stream = 13; // Added for batch command
    BatchCommandResult batch_command_result = 14;             // Added for batch command
  }
}

// New message for static system information
message StaticSystemInfo {
  string architecture = 1; // e.g., "x86_64", "aarch64"
  string cpu_model = 2;    // e.g., "Intel(R) Core(TM) i7-8700K CPU @ 3.70GHz"
  string os_family = 3;    // e.g., "Linux", "Windows", "Darwin"
  string os_version = 4;   // e.g., "Ubuntu 22.04.1 LTS", "10.0.19044"
  string kernel_version = 5; // e.g., "5.15.0-48-generic"
  string hostname = 6;
  // Potentially add more static info here if needed in the future
  // string total_disk_space_summary = 7; // e.g. "Total: 500GB (Root: 100GB, Data: 400GB)"
  // string total_memory_formatted = 8; // e.g. "16 GB"
}

// Messages for dynamic configuration updates
message UpdateConfigRequest {
  AgentConfig new_config = 1;
  // A version identifier for this config update, e.g., a timestamp or a hash.
  string config_version_id = 2;
}

message UpdateConfigResponse {
  // The version id from the request, to correlate response with request.
  string config_version_id = 1;
  bool success = 2;
  string error_message = 3; // Optional, for when success is false.
}

message MessageToAgent {
  uint64 server_message_id = 1;
  oneof payload {
    ServerHandshakeAck server_handshake_ack = 2;
    // AgentConfig is now sent only in ServerHandshakeAck, so field 3 is removed.
    CommandRequest command_request = 4; // For single, non-streaming commands
    PtyDataToAgent pty_data_to_agent = 5;
    Heartbeat heartbeat_request = 6;
    UpdateConfigRequest update_config_request = 7;
    BatchAgentCommandRequest batch_agent_command_request = 8;       // Added for batch command
    BatchTerminateCommandRequest batch_terminate_command_request = 9; // Added for batch command
  }
}